--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -218,6 +218,8 @@ set(PROJECT_HEADERS
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/Engine.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/io/csv.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/io/ClipboardHandler.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/alerts/AlertListItem.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/alerts/AlertListModel.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/dds/EndpointModelItem.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/dds/LocatorModelItem.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/dds/ParticipantModelItem.h
@@ -256,6 +258,8 @@ set(PROJECT_SOURCES_NO_MAIN
     ${PROJECT_SOURCE_DIR}/src/Engine.cpp
     ${PROJECT_SOURCE_DIR}/src/io/csv.cpp
     ${PROJECT_SOURCE_DIR}/src/io/ClipboardHandler.cpp
+    ${PROJECT_SOURCE_DIR}/src/model/alerts/AlertListItem.cpp
+    ${PROJECT_SOURCE_DIR}/src/model/alerts/AlertListModel.cpp
     ${PROJECT_SOURCE_DIR}/src/model/dds/EndpointModelItem.cpp
     ${PROJECT_SOURCE_DIR}/src/model/dds/ParticipantModelItem.cpp
     ${PROJECT_SOURCE_DIR}/src/model/info/InfoModel.cpp
