Bugfix change property aarch to arch
Signed-off-by: Raül <raulojeda@eprosima.com>

--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -48,7 +48,7 @@ jobs:
           - version: ubuntu-24.04
             aarch: 'linux_gcc_64'
           - version: windows-2022
-            aarch: 'win64_msvc2019_64'
+            aarch: 'win64_msvc2022_64'
 
     steps:
 
@@ -167,6 +167,7 @@ jobs:
           dir: '${{ github.workspace }}/qt_installation/'
           modules: 'qtcharts'
           setup-python: 'false'
+          arch: 'linux_gcc_64'
 
       - name: Compile and run tests
         uses: eProsima/eProsima-CI/multiplatform/colcon_build_test@v0
@@ -220,7 +221,7 @@ jobs:
           dir: '${{ github.workspace }}/qt_installation/'
           modules: 'qtcharts'
           setup-python: 'false'
-          aarch: 'linux_gcc_64'
+          arch: 'linux_gcc_64'
 
       - name: Install OpenSSL in windows
         if: runner.os == 'Windows'
